[gd_scene load_steps=6 format=3 uid="uid://bj2556dthmk1e"]

[ext_resource type="Script" uid="uid://4flv2qyji2mp" path="res://dev_scenes/simple_chat/ai_simple_text_interface.gd" id="1_6vno8"]
[ext_resource type="Script" uid="uid://demr3r0wkqqj1" path="res://addons/player2/Player2STT.gd" id="2_wfmdp"]
[ext_resource type="Script" uid="uid://b6indg81ao1we" path="res://addons/player2/player2_config.gd" id="3_e7tri"]

[sub_resource type="LabelSettings" id="LabelSettings_ygx8q"]
font_size = 156

[sub_resource type="Resource" id="Resource_jbt0g"]
script = ExtResource("3_e7tri")
player2_game_key = "my_game"
error_log_ui = true
endpoint_chat = "http://127.0.0.1:4315/v1/chat/completions"
endpoint_health = "http://127.0.0.1:4315/v1/health"
endpoint_tts_speak = "http://127.0.0.1:4315/v1/tts/speak"
endpoint_tts_stop = "http://127.0.0.1:4315/v1/tts/stop"
endpoint_get_selected_characters = "http://127.0.0.1:4315/v1/selected_characters"
endpoint_stt_start = "http://127.0.0.1:4315/v1/stt/start"
endpoint_stt_stop = "http://127.0.0.1:4315/v1/stt/stop"
request_too_much_delay_seconds = 3.0
metadata/_custom_type_script = "uid://b6indg81ao1we"

[node name="Simple Interface" type="ColorRect" node_paths=PackedStringArray("button", "text", "chat", "poke_button", "player2_stt")]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -161.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_6vno8")
button = NodePath("Button")
text = NodePath("TextEdit")
chat = NodePath("Label")
poke_button = NodePath("Poke Button")
player2_stt = NodePath("Player2STT")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 967.0
offset_top = 28.0
offset_right = 1137.0
offset_bottom = 131.0
text = "Send"

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -205.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_top = -222.0
offset_right = 943.0
offset_bottom = -8.0
vertical_alignment = 2

[node name="Billboard" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -5.0
offset_top = -288.0
offset_right = -5.0
offset_bottom = -288.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_ygx8q")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Poke Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -125.0
offset_top = -64.0
offset_right = -24.0
offset_bottom = -13.0
grow_horizontal = 0
action_mode = 0
text = "Poke"

[node name="Player2STT" type="Node" parent="."]
script = ExtResource("2_wfmdp")
config = SubResource("Resource_jbt0g")
metadata/_custom_type_script = "uid://demr3r0wkqqj1"

[node name="TTS Label" type="Label" parent="Player2STT"]
offset_left = 7.0
offset_top = 459.0
offset_right = 133.0
offset_bottom = 482.0
text = "Hold Tab to do STT"

[node name="Listening Label" type="Label" parent="Player2STT"]
visible = false
offset_left = 190.0
offset_top = 461.0
offset_right = 284.0
offset_bottom = 484.0
text = "(Listening...)"

[node name="Reply Wait Label" type="Label" parent="Player2STT"]
visible = false
offset_left = 190.0
offset_top = 461.0
offset_right = 284.0
offset_bottom = 484.0
text = "(Processing STT...)"

[connection signal="listening_started" from="Player2STT" to="Player2STT/Listening Label" method="show"]
[connection signal="listening_stopped" from="Player2STT" to="Player2STT/Listening Label" method="hide"]
[connection signal="reply_wait_started" from="Player2STT" to="Player2STT/Reply Wait Label" method="show"]
[connection signal="reply_wait_stopped" from="Player2STT" to="Player2STT/Reply Wait Label" method="hide"]
